[build-system]
requires = ["setuptools>=61,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubui-brain"
version = "0.1.0.post1"
description = "Python SDK for building Voice Agent backends (the Brain)"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "HubUI", email = "info@hubui.ai"}]
keywords = [
    "voice-agent",
    "websocket",
    "llm",
    "compositional-ai",
    "brain",
    "thinker",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
examples = [
    "openai>=1.0",
    "langgraph>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/HubUI-AI/hubui-brain"
Documentation = "https://github.com/HubUI-AI/hubui-brain#readme"
Repository = "https://github.com/HubUI-AI/hubui-brain.git"
Issues = "https://github.com/HubUI-AI/hubui-brain/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hubui_brain*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
